--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/andart71/skillbox-test/issues"
   },
-  "homepage": "https://github.com/andart71/skillbox-test#readme"
+  "homepage": "https://github.com/andart71/skillbox-test#readme",
+  "dependencies": {
+    "express": "^4.17.3",
+    "pg": "^8.7.3"
+  }
 }
